Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - Added simple example scripts and small applications in the 'examples' 
   directory.

 - There is a new command-line namespace introspection tool, 'n2', which
   can be accessed by running 'peak n2'.  Type 'peak n2 -h' for help.

 - The PEAK_CONFIG environment variable can now list multiple files, separated
   by the platform's 'os.pathsep' (e.g. ':' on Unix, ';' on Windows).

 - It's no longer necessary to provide a '_defaultState()' implementation
   for an EntityDM: a default implementation is now supplied.

 - Added automatic installation of 'datetime' package for Python < 2.3.

 - CGI support has been moved from 'peak.running.zpublish' into
   'peak.running.commands' (for "raw" CGI/FastCGI) and 'peak.web' (for the
   PEAK high-level publishing framework).  You can use 'peak CGI someName' to
   adapt 'someName' to a 'running.IRerunnableCGI' and run it as a CGI/FastCGI.

 - There is now a 'peak.security' package, available from 'peak.api' as
   'security'.  It provides permission management functions: you can define
   abstract permissions by subclassing 'security.Permission', then create
   permission checking rules by subclassing 'security.RuleSet', and declare
   the permissions needed to access attributes of a class with
   'security.allow()'.  The test suite demonstrates a complex application
   ruleset with dynamic, data-driven permissions.

 - There is now an interface for "Active Descriptors":
   'binding.IActiveDescriptor'.  'peak.binding' now uses this interface to
   identify active descriptors, so you can now create your own.  (Previously,
   'peak.binding' used 'isinstance()' to detect active descriptors.)

 - 'peak.naming' no longer automatically converts all addresses to the
   addressed objects.  You must specifically request the interface you want
   by adapting the retrieved object to that interface.  This can be done by